--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
 }
 
 
@@ -9,11 +8,12 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.adsmanager.admobmodule"
+        applicationId "com.adsmanager.applovinmodule"
         minSdk 19
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -36,6 +36,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    implementation 'com.github.devmasyadi:android-ads-manager-core:1.0.2'
     implementation project(':applovin')
 
 }
