--- a/applovin/build.gradle
+++ b/applovin/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.github.devmasyadi:android-ads-manager-core:1.0.2'
+    implementation 'com.google.android.gms:play-services-ads:21.2.0'
     implementation "com.applovin:applovin-sdk:11.4.6"
-    implementation 'com.applovin.mediation:facebook-adapter:6.11.0.5'
-    implementation 'com.applovin.mediation:google-adapter:21.2.0.0'
 }
